scanner/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dolphin-scanner-service
  labels:
    app: dolphin-scanner
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: dolphin-scanner
---
apiVersion: v1
kind: Service
metadata:
  name: dolphin-scanner-headless
  labels:
    app: dolphin-scanner
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: dolphin-scanner
